# calorie-db

./: .env  Cargo.toml
food_data/: filtered_nutrition.csv
migrations/2024-03-18-190636_create_posts/: down.sql  up.sql
migrations/2024-05-20-153805_add_fk/: down.sql  up.sql
migrations/2024-06-09-202214_remove-meal-note/: down.sql  up.sql
migrations/2024-06-23-175932_product-nutritions/: down.sql  up.sql
migrations/2024-06-23-182729_nutritions_view/: down.sql  up.sql
src/: lib.rs  load_food_data.rs  main.rs  middleware.rs  models.rs  product_measures.rs  products.rs  schema.rs  test.rs  user_extractor.rs  user_meals.rs  user_meals_calculated.rs  users.rs
