[package]
name = "calorie-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres","uuid","chrono","r2d2"] }
dotenv = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0.60"
argon2 = "0.5.3"
actix-cors = "0.7.0"
csv = "1.3.0"
serde_json = "1.0.118"
